# agentic-framework-game

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/scripts/: bump_version.py
.github/workflows/: ci.yaml  release.yaml
examples/: chat_agent.py  chat_agent_ollama.py  multi_agent_basic_chat.py  multi_agent_chat_websearch.py
src/game/: __init__.py  agent.py  environment.py  goal.py  logger.py  prompt.py  settings.py
src/game/action/: __init__.py  action.py  context.py  python_registry.py  registry.py  tool_decorator.py
src/game/language/: __init__.py  base.py  common.py  exceptions.py  function_calling_language.py  json_action_language.py
src/game/llm/: __init__.py  base.py  litellm_completion.py
src/game/memory/: __init__.py  base.py  dict_memory.py
src/game/utils/: logs.py  memory.py
tests/integration/: conftest.py  test_agent.py
tests/unit/: test_agent.py  test_environment.py
tests/unit/action/: test_tool.py
tests/unit/language/: test_function_calling_language.py  test_json_action_language.py
tests/units/: test_version.py
