[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "game"
description = "TODO"
requires-python = ">=3.12"
readme = "README.md"
dynamic = ["version"]
authors = [
  { name="Evan Str", email="author@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies=[
    "litellm==1.68.0",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "numpydoc==1.8.0",
    "python-dotenv==1.1.0",
    "structlog==25.3.0",
    "colorama==0.4.6",
]

[tool.setuptools.dynamic]
version = { file = "version.txt" }

[tool.isort]
profile = "black"

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-env==1.1.5",
    "black==25.1.0",
    "mypy==1.15.0",
    "isort==5.10.1",
    "pre_commit==4.2.0",
    # For the examples
    "markdownify==1.1.0",
    "duckduckgo-search==8.0.1"
]